# c-raio

./: .gitignore  CMakeLists.txt
assets/shaders/: fshader.glsl  vshader.glsl
lib/imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
src/: main.cpp
src/app/: Application.cpp  Application.h
src/app/shader/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
src/app/texture/: Texture.cpp  Texture.h
src/utils/: Vector2D.cpp  Vector2D.h  file.cpp  file.h
